--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,127 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background: rgb(51, 50, 48);
+  height: 100vh;
+  background: radial-gradient(
+    circle,
+    rgba(51, 50, 48, 0.9248074229691877) 0%,
+    rgba(13, 12, 12, 1) 9%,
+    rgba(42, 41, 41, 1) 15%,
+    rgba(45, 45, 45, 1) 19%,
+    rgba(5, 5, 5, 1) 29%,
+    rgba(10, 10, 10, 1) 34%,
+    rgba(43, 43, 43, 1) 40%,
+    rgba(18, 17, 17, 0.9836309523809523) 44%,
+    rgba(32, 30, 28, 1) 55%,
+    rgba(9, 8, 8, 1) 67%,
+    rgba(38, 37, 37, 1) 73%,
+    rgba(0, 0, 0, 1) 78%,
+    rgba(0, 0, 0, 1) 85%,
+    rgba(1, 1, 1, 1) 91%,
+    rgba(37, 35, 34, 1) 100%
+  );
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+h1 {
+  color: aqua;
+}
+#card {
+  width: 70vw;
+  height: auto;
+
+  background-color: white;
+  background: radial-gradient(
+    circle,
+    rgba(51, 50, 48, 0.9248074229691877) 0%,
+    rgba(13, 12, 12, 1) 9%,
+    rgba(42, 41, 41, 1) 15%,
+    rgba(45, 45, 45, 1) 19%,
+    rgba(5, 5, 5, 1) 29%,
+    rgba(10, 10, 10, 1) 34%,
+    rgba(43, 43, 43, 1) 40%,
+    rgba(18, 17, 17, 0.9836309523809523) 44%,
+    rgba(32, 30, 28, 1) 55%,
+    rgba(9, 8, 8, 1) 67%,
+    rgba(38, 37, 37, 1) 73%,
+    rgba(0, 0, 0, 1) 78%,
+    rgba(0, 0, 0, 1) 85%,
+    rgba(1, 1, 1, 1) 91%,
+    rgba(37, 35, 34, 1) 100%
+  );
+  box-shadow: 0 20px 500px rgba(0, 0, 0, 0.15);
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  border-left: 1px solid rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(5px);
+  color: rgb(238, 236, 236);
+  position: relative;
+  display: flex;
+  flex-direction: row;
+}
+#image {
+  width: 70%;
+}
+img {
+  width: 100%;
+  height: 100%;
+}
+
+#content {
+  padding: 40px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas:
+    "header header"
+    "side-header side-header"
+    "main main"
+    "footer side-footer"
+    "side-section section";
+}
+h2 {
+  grid-area: header;
+}
+h4 {
+  grid-area: side-header;
+  color: rgb(0, 110, 110);
+}
+#parag {
+  grid-area: main;
+  display: flex;
+  font-size: 1.1rem;
+}
+
+#prevReview {
+  grid-area: footer;
+}
+
+#nextReview {
+  grid-area: side-footer;
+}
+
+#btn {
+  grid-area: section;
+  width: 10rem;
+  margin: 10px;
+}
+
+@media screen and (max-width: 500px) {
+  #card {
+    width: 100vw;
+  }
+  #image {
+    display: none;
+  }
 }
